final round of spelling fixes

--- a/dokumentation/src/abbreviations.tex
+++ b/dokumentation/src/abbreviations.tex
@@ -4,7 +4,7 @@
     \item \textbf{CLI}: Command Line Interface
     \item \textbf{CSV}: Comma-separated Values Format
     \item \textbf{DLD}: Damerau-Levenshtein Distanz
-    \item \textbf{IB}: Interactive Brokers, Daten Anbieter und FI Broker
+    \item \textbf{IB}: Interactive Brokers, Datenanbieter und FI Broker
     \item \textbf{TDD}: Test-Driven Development
     \item \textbf{ERM}: Entity-Relationship-Model
     \item \textbf{UML}: Unified-Modelling-Language
