--- a/dokumentation/src/abnahme.tex
+++ b/dokumentation/src/abnahme.tex
@@ -5,11 +5,11 @@ Abteilung für Datenverarbeitung abgesprochen, sowohl dem Abteilungsleiter im Ei
 als auch der gesamten Abteilung in Form einer Präsentation, präsentiert.
 
 Das Hauptaugenmerk und die Vorgehensweise war in beiden Fällen jedoch unterschiedlich
-und wird in den folgenden Aschnitten erläutert.
+und wird in den folgenden Abschnitten erläutert.
 
 \subsection{Code-Flight mit der Abteilungsleitung}
 
-Um die Qualität des Codes zu gewährleisten wurde für das Projekt die Abnahme über einen Code-Flight\footnote{zu deutsch \"Programm-Flug"} festgelegt. Diese einstündige
+Um die Qualität des Codes zu gewährleisten wurde für das Projekt die Abnahme über einen Code-Flight\footnote{zu deutsch ''Programm-Flug'' - bei dieser Technik erklärt eine Person dem Zuhörer laut den Code und beschreibt was dessen Funktion ist.} festgelegt. Diese einstündige
 Vorführung des Codes wurde mit dem Abteilungsleiter Sebastian Freundt im
 Vier-Augen-Gespräch vollzogen und gestaltete sich wie folgt:
 
@@ -29,3 +29,4 @@ eine Präsentation für das gesamte Team der Abteilung Datenverarbeitung gehalte
 Diese beschränkte sich im Inhalt jedoch auf die Grundprinzipien des Algorithmus, sowie
 die Funktion und Nutzung des CLI-Programms. Unter anderem wurden verfügbare
 Parameter und maximal zulässige Dateigrößen erläutert.
+Zum Schluss wurde noch ein Post Mortem gehalten, und die gewonnenen Erkenntnisse in Bezug auf die Arbeit mit Kanban und der testgetriebenen Entwicklung erläutert.
