--- a/dokumentation/src/anhang.tex
+++ b/dokumentation/src/anhang.tex
@@ -16,7 +16,7 @@
        \begin{minipage}{0.57\textwidth}
          \centering
          \caption{UML Diagramm der Geschäftslogik nach Fertigstellung des Projekts}%
-         \label{fig:businessLogicAlt}%
+         \label{fig:businessLogicNeu}%
          \includegraphics[height=11cm, angle=0]{businessLogicNew}%
        \end{minipage}
     \end{figure}
