--- a/dokumentation/src/implementierung.tex
+++ b/dokumentation/src/implementierung.tex
@@ -3,12 +3,12 @@
 \subsection{Entwicklungsvorbereitung}
 Zunächst mussten einige organisatorische Bedingungen erfüllt werden, bevor die eigentliche Entwicklungsphase offiziell beginnen konnte. So wurden das Kanban Board mit den
 Aufgabenpaketen aus dem Pflichtenheft populiert. Hierzu wurden Tests und deren
-dazugehörigen Funktionen separat betrachtet und als Arbeitspaket beschrieben.
+dazugehörigen Funktionen betrachtet und als Arbeitspaket beschrieben.
 
-\subsection{Implementierung der Datenstruktur}
+\subsection{Implementierung der Datenstrukturen}
 Wie bereits im vorherigen Abschnitt erwähnt, werden zwei spezielle Datenstrukturen für das Programm benötigt - Hashmaps und dynamisch wachsende Arrays.
 
-\subsubsection{Hashmap-Implementierung}
+\subsubsection{Implementierung der Hashmap}
 
 
 Auf die eigene Implementierung einer Hashmap wurde verzichtet, stattdessen wurde
@@ -21,11 +21,11 @@ vorkommen kann, musste der Containertyp von einem Integer zu einen dynamisch
 wachsenden Array abgewandelt werden. Da letzteres ohnehin entwickelt werden muss,
 war die Komplexität dieser Anforderung gering.
 
-\subsubsection{Dynamische Array-Implementierung}
+\subsubsection{Implementierung des Dynamisch wachsenden Arrays}
 C stellt nur simple Datentypen zur Verfügung, welche dem Nutzer erlauben komplexere
 Datenstrukturen abzubilden. Da ein dynamisch-wachsendes
 Array nicht in C zur Verfügung steht, musste eine Datenstruktur für dieses erstellt werden.
 Das Konzept hierbei ist recht einfach - sollte das Array voll sein, so wird beim
 nächsten Aufruf der Insert-Funktion die Länge des Array verdoppelt. Hierfür wurde
-eine neue Datenstruktur angelegt und drei Funktionen definiert, um mit der Datenstruktur
+eine neue Datenstruktur angelegt und drei Funktionen definiert, um mit dem Array
 interagieren zu können.\par
