--- a/dokumentation/src/intro.tex
+++ b/dokumentation/src/intro.tex
@@ -54,7 +54,7 @@ Das Programm wird vor Allem in der Abteilung für Datenverarbeitung zum Einsatz 
 Als technische Schnittstelle ist insbesondere das Datensammelsystem zu nennen,
 welches täglich unsere Datenbanken mit neuen Datensätzen füttert. Die Ergebnisse
 dieses Systems liegen im CSV-Format auf unseren Servern, bevor sie am Ende des
-Tages komprimiert werden.Eine direkte Anbindung des zu entwickelnden Projekts an das Datensammelsystem findet nicht statt. Wichtig ist allerdings, dass das Programm .CSV-Dateien unterstützt, welche vom System bereitgestellt werden.\par
+Tages komprimiert werden.Eine direkte Anbindung des zu entwickelnden Projekts an das Datensammelsystem findet nicht statt. Wichtig ist allerdings, dass das Programm CSV-Dateien unterstützt, welche vom System bereitgestellt werden.\par
 
 Mittel und Genehmigung des Projekts stellt die Abteilung Datenverarbeitung,
 vertreten durch Sebastian Freundt.\par
@@ -63,7 +63,7 @@ vertreten durch Sebastian Freundt.\par
 Während die Hauptziele des Projekts das Vergleichen mehrerer hunderttausend Symbole und die effiziente Gestaltung dieser Vergleiche ist, sind folgende Themen explizit nicht Teil der Aufgabe:
 
 \begin{itemize}
-    \item Datenintegrität - Die Überprüfung des Datenformats ist nicht Teil unseres Aufgabenfeldes.
+    \item Datenintegrität - Die Überprüfung des Datenformats ist nicht Teil des Aufgabenfeldes.
     \item Datenverifizierung - Die Prüfung ob \textbf{eingehende} Daten korrekt sind, fällt nicht in das Aufgabenfeld.
     \item Datenbereitstellung - Die Bereitstellung der verarbeiteten Daten (z.B. als Datenbank o.Ä.) ist ebenfalls nicht Teil des Projekts.
 \end{itemize}
