--- a/dokumentation/src/analysephase.tex
+++ b/dokumentation/src/analysephase.tex
@@ -31,7 +31,7 @@ einem 4-Kerner.\par
 Gewünscht ist eine performantere und Ressourcen-schonendere Implementierung des obigen Prozesses,
 sodass die Daten auf einem firmeninternen 4-Kerner zeitnah ausgerechnet werden können.
 Hierbei ist es nicht unbedingt erforderlich die, Damerau-Levenshtein-Distanz zu verwenden. Desweiteren soll der Zeitaufwand der ad-hoc 
-Vergleichue der Ergebnisse drastisch reduziert werden.\par
+Vergleichung der Ergebnisse drastisch reduziert werden.\par
 
 
 
@@ -41,22 +41,21 @@ Vergleichue der Ergebnisse drastisch reduziert werden.\par
 Ein Tool, welches das oben beschriebene Problem löst gibt es zur Zeit nur mit dem
 ressourcenintensiven DLD-Matrix-Verfahren. Ein Projekt, welches ein ähnliches
 Problem löst, ist das Open-source Projekt fuzzy-join\footnote{https://github.com/dgrtwo/fuzzyjoin}.
-Dieses Tool vergleicht Daten jedoch nur in eine Richtung (One-To-Many), während unser
-Use-Case ein bidirektionales Verfahren benötigt (Many-To-Many).\par
+Dieses Tool vergleicht Daten jedoch nur in eine Richtung (One-To-Many), während das Projektszenario ein bidirektionales Verfahren benötigt (Many-To-Many).\par
 
 Somit stellte sich die Frage nach einer optimalen Vorgehensweise zur Umsetzung des
-Projekts. Hierzu wurde vom Autor eine Nutzwertanalyse \ref{nwa:projektentwicklung} erstellt, um diversen Lösungswege zu evaluieren. \\
+Projekts. Hierzu wurde vom Autor eine Nutzwertanalyse (Anhang Abschnitt \ref{nwa:projektentwicklung}) erstellt, um diversen Lösungswege zu evaluieren. \\
 Diese wurden anhand der folgenden Kriterien bewertet:
 
 
 \begin{itemize}
-    \item \textbf{Projektkosten} - Wie hoch sind diePersonal-, Server- und/oder Softwarekosten der jeweiligen Lösung?
+    \item \textbf{Projektkosten} - Wie hoch sind die Personal-, Server- und/oder Softwarekosten der jeweiligen Lösung?
 
-    \item \textbf{Nachhaltigkeit} - Gibt es externe Abhängigkeiten? Wenn ja, wie viele und besteht ein Risiko des Ausfalls dieser Abhängigkeiten? Wie gut lässt sich das Programm in unseren Arbeitsprozess eingliedern? 
+    \item \textbf{Nachhaltigkeit} - Gibt es externe Abhängigkeiten? Wenn ja, wie viele und besteht ein Risiko eines technischen Ausfalls dieser Abhängigkeiten? Wie gut lässt sich das Programm in unseren Arbeitsprozess eingliedern? 
 
     \item \textbf{Flexibilität} - Wie leicht ist das Programm erweiterbar? Besteht die Möglichkeit in Zukunft weitere Parameter anzugeben um die Ergebnisse anzupassen? Wenn ja, wie sehr beeinträchtigt diese Erweiterung die Performanz des Programms?
 
-    \item \textbf{Unterhaltungskosten} - Neben den Initialen Projektkosten, wie hoch sind die laufenden Kosten für die Lösung? Fallen Mietkosten für Server an? Wie hoch ist der Überwachungsaufwand der benötigt wird um die Funktionsfähigkeit der Lösung zu überprüfen?
+    \item \textbf{Unterhaltungskosten} - Neben den initialen Projektkosten, wie hoch sind die laufenden Kosten für die Lösung? Fallen Mietkosten für Server an? Wie hoch ist der Überwachungsaufwand der benötigt wird um die Funktionsfähigkeit der Lösung zu überprüfen?
 
 \end{itemize}
 
@@ -65,16 +64,15 @@ Diese wurden anhand der folgenden Kriterien bewertet:
 \subsubsection{Projektkosten}
 Als nächstes wurden die Projektkosten berechnet. Hierfür wurden pauschale Beträge 
 für Mitarbeiterstundenlöhne, sowie Kosten für Räumlichkeiten, Strom und sonstige Utensilien 
-(Papier, Drucker, Programme, Rechner etc) veranschlagt. Diese können in der Tabelle 
-\ref{tabelle:projektkosten} eingesehen werden. Es wurden hierfür ein Stundenlohn von 5,50€ für den
+(Papier, Drucker, Programme, Rechner etc) veranschlagt. Diese können in der Tabelle im Anhang (Abschnitt \ref{tabelle:projektkosten}) eingesehen werden. Es wurden hierfür ein Stundenlohn von 5,50€ für den
 Autoren, sowie ein Stundenlohn von 35€ für jeden weiteren Mitarbeiter angesetzt. Nutzungskosten 
 der Räumlichkeiten, Rechner, Software und weiterer Utensilien wurden mit 20€ pro Stunde kalkuliert. \par
 
 
 \subsubsection{Amortisationsdauer}
-Nach einer Einschätzung der Abteilung für Datenverarbeitung wird zur Zeit jede Woche ein Mitarbeiter etwa 10 Stunden pro Woche benötigt, Symboliken miteinander zu vergleichen. Dies ergibt, mit dem in der Projektkostenkalkulation verwendeten
-Stundenlöhnen und Kosten für Räumlichkeiten, Hard- und Software also \[10 Stunden*55€ = 550€\] pro Woche.
-Der Autor verspricht sich durch das Programm eine Beschleunigung des Vergleichsprozesses um etwa 30\%. Im Optimalfall würde der Prozess nur noch etwa zwei Stunden (80\% Verbesserung) dauern und eine Verbesserung von 55\% wird vom Autor als realistisch eingeschätzt\footnote{Die Zeiten wurden anhand von Kalkulationen der theorethischen Rechenvorgänge unter Einbezug von Schreib-, und Lesegeschwindigkeiten des Speichers, sowie Geschwindigkeit der CPU geschätzt.}.
+Nach einer Einschätzung der Abteilung für Datenverarbeitung wird zur Zeit jede Woche ein Mitarbeiter etwa 10 Stunden pro Woche benötigt, um Symboliken miteinander zu vergleichen. Dies ergibt, mit dem in der Projektkostenkalkulation verwendeten
+Stundenlöhnen und Kosten für Räumlichkeiten, Hard- und Software also $10 Stunden*55\text{\euro} = \frac{550\text{\euro}{\text{Woche}}}$ pro Woche.
+Der Autor verspricht sich durch das Programm eine Beschleunigung des Vergleichsprozesses um etwa 30\%, da der größte zeitliche Anteil vom manuellen Vergleich beansprucht wird. Im Optimalfall würde der Prozess nur noch etwa zwei Stunden (80\% Verbesserung) dauern und eine Verbesserung von 55\% wird vom Autor als realistisch eingeschätzt\footnote{Die Zeiten wurden anhand von Kalkulationen der theorethischen Rechenvorgänge unter Einbezug der Schreib-, und Lesegeschwindigkeiten des Speichers, sowie Geschwindigkeit der CPU geschätzt.}.
 
 Anhand dieser Prozente lassen sich folgende Amortisationsdauern errechnen:\\
 \\
@@ -96,5 +94,5 @@ $\frac{3,883.75\text{\euro}}{550\text{\euro} \times 30\text{\%}} \approx 24 Woch
 
 \subsection{Lastenheft / Fachkonzept}
 Ein Lastenheft wurde von der Abteilung Datenverarbeitung, vertreten durch Sebastian Freundt,
-erstellt und dem Autor vorgelegt. Ein Auszug dieses Dokumentes befindet sich im Anhang in Abschnitt \ref{auszug:lastenheft}.\par
+erstellt und dem Autor vorgelegt. Ein Auszug dieses Dokumentes befindet sich im Anhang  (Abschnitt \ref{auszug:lastenheft}).\par
 
